--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ dependencyResolutionManagement {
 rootProject.name = "SharedScopeCache"
 include ':sample'
 include ':sharedscopecache'
+include ':test'
