--- a/sharedscopecache/src/main/AndroidManifest.xml
+++ b/sharedscopecache/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="open.source.sharedscopecache">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,6 +12,7 @@
             android:authorities="${applicationId}.shared-scope-cache"
             android:enabled="true"
             android:exported="false"
-            android:multiprocess="false" />
+            android:multiprocess="false"
+            tools:node="merge" />
     </application>
 </manifest>
