--- a/sharedscopecache/src/main/AndroidManifest.xml
+++ b/sharedscopecache/src/main/AndroidManifest.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="open.source.sharedscopecache">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
         <provider
-            android:name=".SharedScopeProvider"
+            android:name=".SharedScopeCache"
             android:authorities="${applicationId}.shared-scope-cache"
-            android:enabled="true"
+            android:grantUriPermissions="true"
             android:exported="false"
-            android:multiprocess="false"
-            tools:node="merge" />
+            android:multiprocess="false" />
     </application>
 </manifest>
